# llm-evaluator

./: .gitignore  README.md  api_test_client.py  project-structure.txt  pyproject.toml
backend/: db-debug.py  llm_evaluator.db
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/services/: evaluation-service.py  evaluation_service.py  input_service.py  llm-service.py  llm_service.py  prompt-service.py  prompt_service.py
frontend/: index.html
frontend/css/: base.css  components.css  layout.css  modal.css  navigation.css  responsive.css  styles.css  views.css
frontend/js/: api.js  app.js  batchEvaluation.js  comparison.js  history.js  inputSets.js  module-init.js  promptWorkshop.js  resultComponent.js  ui.js
