[project]
name = "llm-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "llm>=0.22",
    "pydantic>=2.0.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.15",
    "uvicorn==0.22.0",
]
